# crewAI-examples

./: README.md
example/: README.md  pyproject.toml  report.md
example/src/example/: crew.py  main.py
job-posting/: .gitignore  job.md  pyproject.toml
job-posting/src/job_posting/: crew.py  main.py
surprise_trip/: .env.example  pyproject.toml
surprise_trip/src/surprise_travel/: crew.py  main.py
surprise_trip/src/surprise_travel/tools/: custom_tool.py
