[project]
name = "example"
version = "0.1.0"
description = "example using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
example = "example.main:run"
run_crew = "example.main:run"
train = "example.main:train"
replay = "example.main:replay"
test = "example.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
