[project]
name = "job_posting"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.12,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
job_posting = "job_posting.main:run"
train = "job_posting.main:train"
run_crew = "job_posting.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
